ajout des choses des coaches